--- a/root-react/src/stylesheets/styles.css
+++ b/root-react/src/stylesheets/styles.css
@@ -294,3 +294,56 @@ h1 {
 	max-width: 70vw;
 	display: flex;
 }
+
+#cookieContainer {
+	display: block;
+	font-family: Lato, Roboto, sans-serif;
+	font-weight: 100;
+	font-size: 0.9em;
+	background-color: #191919;
+	padding: 0.8em;
+	text-align: center;
+	border-radius: 0.2em;
+	color: white;
+	position: fixed;
+	bottom: 0;
+	width: 100%;
+	box-shadow: 0px 2px 10px #888888;
+}
+
+.cookieModal {
+	margin: auto;
+	overflow: auto;
+	margin-top: 5vh;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-direction: column;
+	width: 40vw;
+	height: 75vh;
+	padding: 10px;
+	box-shadow: 3px 5px 20px 3px rgb(50, 50, 56);
+	background-color: white;
+}
+
+.acceptCookies {
+	color: #191919;
+	font-weight: bold;
+	background-color: #c8e65e;
+	padding: 0.6em;
+	margin-left: 5px;
+	margin-top: 3px;
+	cursor: pointer;
+	border-radius: 0.4em;
+}
+
+#manageCookies {
+	color: #191919;
+	font-weight: bold;
+	background-color: #ffffff;
+	padding: 0.6em;
+	margin-top: 3px;
+	margin-left: 5px;
+	cursor: pointer;
+	border-radius: 0.4em;
+}
