--- a/root-react/src/stylesheets/styles.css
+++ b/root-react/src/stylesheets/styles.css
@@ -300,11 +300,11 @@ h1 {
 	font-family: Lato, Roboto, sans-serif;
 	font-weight: 100;
 	font-size: 0.9em;
-	background-color: #191919;
+	background-color: #ffffff;
 	padding: 0.8em;
 	text-align: center;
 	border-radius: 0.2em;
-	color: white;
+	color: black;
 	position: fixed;
 	bottom: 0;
 	width: 100%;
@@ -312,38 +312,53 @@ h1 {
 }
 
 .cookieModal {
+	font-family: Arial, Helvetica, sans-serif !important;
 	margin: auto;
 	overflow: auto;
 	margin-top: 5vh;
 	display: flex;
 	align-items: center;
-	justify-content: center;
+	/* justify-content: center; */
 	flex-direction: column;
 	width: 40vw;
 	height: 75vh;
-	padding: 10px;
+	padding: 15px;
 	box-shadow: 3px 5px 20px 3px rgb(50, 50, 56);
 	background-color: white;
 }
 
 .acceptCookies {
-	color: #191919;
+	color: #ffffff;
 	font-weight: bold;
-	background-color: #c8e65e;
-	padding: 0.6em;
+	background-color: #191919;
+	padding: 0.8em;
 	margin-left: 5px;
 	margin-top: 3px;
 	cursor: pointer;
+	width: 10em;
 	border-radius: 0.4em;
 }
 
 #manageCookies {
-	color: #191919;
-	font-weight: bold;
+	color: #487b94;
 	background-color: #ffffff;
-	padding: 0.6em;
+	font-weight: bold;
 	margin-top: 3px;
 	margin-left: 5px;
 	cursor: pointer;
-	border-radius: 0.4em;
+	border: none;
+}
+
+#cookieTitle {
+	font-size: 1.2em;
+	line-height: 1.3;
+	margin-bottom: 10px;
+	width: 100%;
+}
+
+#modalText {
+	clear: both;
+	width: 100%;
+	font-size: 0.82em;
+	line-height: 1.4;
 }
